cabal-version: 2.4
name:          fzf-pass
version:       0.1.0.0
synopsis:      password-store menu using fzf
license:       MIT
license-file:  LICENSE
author:        Connor Prussin
maintainer:    connor@prussin.net

executable fzf-pass
  ghc-options: -Wall -Werror
  build-depends: base >=4.12.0.0, containers, directory, process, mtl, unix
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: FzfPass.Browser FzfPass.Error FzfPass.Fzf FzfPass.Pass
                 FzfPass.Utils FzfPass.WlClip
